--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap');
+
+:root {
+    --gradient: linear-gradient(135deg, rgba(114, 237, 242, 0.5) 10%, rgba(81, 81, 229, 0.5) 50%);
+}
+
 #app {
     height: 100vh;
     text-align: center;
@@ -63,71 +69,207 @@
     display: flex;
     height: 100vh;
     width: 100%;
+    background-color: #343d4b;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .left {
-    width: 50%;
-    background-color: blue;
+    height: 100vh;
+    width: 35%;
+    background-image:
+        var(--gradient),
+        url("https://www.terramater.at/wp-content/uploads/2024/11/March-Morava-02.jpg");
+    background-position: center;
+    background-size: cover;
+    padding-right: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    box-sizing: border-box;
+    box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
 }
 
 .right {
-    width: 50%;
-    background-color: red;
+    height: 100vh;
+    width: 65%;
 }
 
 .details {
     display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 35vh;
-    background-color: green;
-    justify-content: center;
-    align-items: center;
 }
+
+.line {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    height: 3vh;
+    margin-top: 15px;
+}
+
+.title {
+    font-size: 24px;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.value {
+    font-size: 24px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
 
 .weekly {
     display: flex;
     width: 100%;
     height: 35vh;
-    background-color: yellow;
     justify-content: center;
     align-items: center;
+}
+
+.weekly-list {
+    height: fit-content;
+    width: fit-content;
+    list-style-type: none;
+    padding: 0;
+    margin: 10px 35px;
+    box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    background-color: #3c4657;
+}
+
+.weekly-list li {
+    float: left;
+    padding: 15px;
+    cursor: pointer;
+    -webkit-transition: 200ms ease;
+    -o-transition: 200ms ease;
+    transition: 200ms ease;
+    border-radius: 10px;
+}
+
+.weekly-list li:hover {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    background-color: #fff;
+    color: #222831;
+    box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2);
+}
+
+.weekly-list li.active {
+    background-color: #fff;
+    color: #222831;
+    border-radius: 10px;
+}
+
+.weekly-list li .day {
+    display: block;
+    margin: 10px 0 0 0;
+    text-align: center;
+    font-weight: normal;
+}
+
+.weekly-list li .day-icon {
+    display: block;
+    height: 30px;
+    width: auto;
+    margin: 0 auto;
+}
+
+.weekly-list li .day-temp {
+    display: block;
+    text-align: center;
+    margin: 10px 0 0 0;
+    font-weight: 700;
 }
 
 .change {
     display: flex;
     width: 100%;
     height: 30vh;
-    background-color: purple;
     justify-content: center;
     align-items: center;
 }
 
 .upper {
+    display: flex;
+    padding-left: 5%;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 100%;
     height: 50vh;
-    background-color: aqua;
-    justify-content: left;
-    text-align: left;
-    line-height: 4px;
-}
-
-.day {
-    font-size: 24px;
-    font-weight: bolder;
-}
-
-.date {
-    font-size: 18px;
-}
-
-.location {
-    margin-top: 30px;
-    font-size: 18px;
 }
 
 .lower {
+    display: flex;
+    padding-left: 5%;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
     width: 100%;
     height: 50vh;
-    justify-content: left;
-    text-align: left;
+}
+
+.day {
+    display: flex;
+    padding-top: 4%;
+    width: 100%;
+    font-size: 32px;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.date {
+    display: flex;
+    width: 100%;
+    font-size: 24px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.location {
+    display: flex;
+    width: 100%;
+    font-size: 24px;
+    margin-top: 5px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+
+.symbol {
+    display: flex;
+    width: 100%;
+    height: 100px;
+}
+
+.symbol img {
+    height: 100px;
+    width: 100px;
+
+}
+
+.temperature {
+    display: flex;
+    width: 100%;
+    font-size: 64px;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.weather {
+    display: flex;
+    width: 100%;
+    font-size: 32px;
+    font-weight: bold;
+    padding-bottom: 4%;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.weather-icon {
+    filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.5));
 }
